welcome.lessons.welcome.summative.Moria.scala.error
DwarfCode:11: error: missing arguments for method setDirection in class AbstractBuggle;
follow this method with `_' if you want to treat it as a partially applied function
  setDirection.EAST
  ^DwarfCode:17: error: missing arguments for method setDirection in class AbstractBuggle;
follow this method with `_' if you want to treat it as a partially applied function
  setDirection.WEST
  ^DwarfCode:22: error: missing arguments for method setDirection in class AbstractBuggle;
follow this method with `_' if you want to treat it as a partially applied function
  setDirection.EAST
  ^