welcome.lessons.welcome.summative.Moria.scala.code
def sortir()
{
  while (!estFaceMur)
  {
    deplaceBiscuit
  }
}

def deplaceBiscuit()
{
  setDirection.EAST
  while (!estSurBiscuit())
  {
    avance()
  }
  prendBiscuit()
  setDirection.WEST
  while (!estSurBiscuit())
  {
    avance()
  }
  setDirection.EAST
  avance()
  poseBiscuit()
}